# Hyperium

./: .gitignore  Cargo.toml  README.md  build.rs
assets/wiki-template/: README.md  mkdocs.yml
release/: hyperium.iss
src/: audio.rs  authenticode.rs  backup.rs  coach.rs  doctor.rs  ftp.rs  genai.rs  icon.rs  launcher.rs  llm.rs  main.rs  manifest.rs  notes.rs  notify.rs  secret.rs  stg.rs  sync.rs  templates.rs  terminal.rs  tools.rs  tray.rs  update.rs  vault.rs  voice.rs  wiki.rs
src/sushi/: api.rs  erc20.rs  intent.rs  market.rs  mod.rs  tokens.rs  trending.rs  wallet.rs
